--- a/style.css
+++ b/style.css
@@ -18,11 +18,13 @@ h2{
 
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half{
     width: 50%;
     padding-left: 5%;
+    text-align: justify;
 }
 
 .half img{
@@ -40,4 +42,10 @@ section{
 .first{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.second{
+background-image: url(images/dream-bg.png);
+background-repeat: no-repeat;
+background-position: right;
 }
