--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ h1{
 
 h2{
     font-size: 50px;
+    margin-top: -10px;
 }
 
 .name{
     color:orange;
 }
 
-section{
+.flex-box{
     display: flex;
     margin-bottom: 150px;
 }
@@ -29,8 +30,11 @@ section{
 
 .half img{
     width: 80%;
+    margin-top: 10px;
 }
+
 .button{
+    margin-top: 20px;
     text-decoration: none;
     background-color: orangered;
     padding: 10px 40px;
@@ -48,4 +52,49 @@ section{
 background-image: url(images/dream-bg.png);
 background-repeat: no-repeat;
 background-position: right;
+}
+.half-ex{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    box-shadow: 10px 10px 45px gray;
+    border-radius: 10px;
+}
+
+.third{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#ex-1{
+    border-left: 8px solid;
+    border-image: linear-gradient(orange,red);
+    border-image-slice: 1;
+
+
+}
+#ex-2{
+    border-left: 8px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+
+
+}
+
+.foot{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    background: coral;
+}
+
+
+#main-ex{
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+    margin-bottom: 40px;
 }
